# rp2040-rustboot

./: .gitignore  Cargo.toml  README.mkdn  build-all.sh  build.rs  link.x  rust-toolchain.toml
.cargo/: config
bootcrc/: Cargo.toml
bootcrc/src/: main.rs
src/: main.rs
